Add GitHub Link.

--- a/JW2005/Views/Home/Index.cshtml
+++ b/JW2005/Views/Home/Index.cshtml
@@ -24,4 +24,5 @@
             }
         }
     </div>
+    <h6 class="footer-text"><a href="https://github.com/stackia/jw2005-monitor" target="_blank"><i class="fa fa-github fa-fw fa-spin"></i>&nbsp;Fuck me on GitHub</a></h6>
 </div>
